# monorepo

charts/: Hardware.drawio  README.md  electronics.drawio  mcu.drawio
pcb/Breakout/: README.md
pcb/CCD/: README.md
pcb/MCB/: README.md
som/os/: .gitignore  Dockerfile  entrypoint.sh  init  kas-conf.yml  repo-sync.sh
som/os/docker/entrypoints/: openstlinux.sh  poky.sh
som/os/docker/setup/: openstlinux.sh
spectro/: .gitignore
spectro/apps/bomc1_if/: pyproject.toml
spectro/apps/bomc1_if/bomc1/: __init__.py  bomc1.py  main.py
spectro/bofp1/: makefile  vhdl_ls.toml
spectro/bofp1/platform/uvvm/: clk_wizard.vhd  fifo_common.vhd  fifo_ctrl.vhd  fifo_data.vhd  fifo_window_256.vhd  fifo_window_64.vhd  frame_bram.vhd  frame_bram_16b.vhd  frame_bram_21b.vhd
spectro/bofp1/platform/vivado/: arty-s7-50.xdc  timing.xdc
spectro/bofp1/src/: adc.vhd  afifo.vhd  avg_moving.vhd  avg_total.vhd  bofp1.vhd  capture.vhd  ccd.vhd  ctrl.vhd  dark_current.vhd  frame_fifo.vhd  frame_ram.vhd  pwm.vhd  reset.vhd  stage_ctrl.vhd  sync.vhd  vivado_pkg.vhd  window_fifo.vhd
spectro/bofp1/src/ctrl/: ctrl.vhd  (+4 more)
spectro/bofp1/tests/: tb_adc.vhd  tb_afifo.vhd  tb_bofp1.vhd  tb_ccd.vhd  tb_ctrl.vhd  tb_pwm.vhd
spectro/controller/kmod/: Makefile
spectro/controller/kmod-bomc1/: .gitignore  Kbuild  Makefile
spectro/mcu/: .gitignore  CMakeLists.txt  Kconfig  test.py  west.yml
spectro/mcu/app/: CMakeLists.txt  prj.conf
spectro/mcu/boards/: nucleo_h753zi.overlay
spectro/mcu/drivers/: CMakeLists.txt  Kconfig
spectro/mcu/include/: CMakeLists.txt
spectro/mcu/src/: main.c
(+83 files in other folders)
